--- a/CRYPTONIT.html
+++ b/CRYPTONIT.html
@@ -36,8 +36,8 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="CRYPTONIT.html" data-home-page-title="CRYPTONIT" class="u-body"><header class="u-clearfix u-custom-color-4 u-header u-sticky u-header" id="sec-4bd5"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-sheet-1">
-        <a href="http://cyrptonit.finance" class="u-image u-image-round u-logo u-image-1">
+  <body class="u-body"><header class="u-clearfix u-custom-color-4 u-header u-sticky u-header" id="sec-4bd5"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-sheet-1">
+        <a href="https://nicepage.com" class="u-image u-image-round u-logo u-image-1">
           <img src="images/cyrptonitlogo1.png" class="u-logo-image u-logo-image-1" data-image-width="43">
         </a>
         <nav class="u-menu u-menu-dropdown u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XS" data-submenu-level="on-click">
@@ -228,7 +228,7 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-style u-custom-color-4 u-expanded-width-sm u-expanded-width-xs u-group u-radius-22 u-shape-round u-group-1">
           <div class="u-container-layout u-container-layout-1">
-            <a href="https://t.me/cryptonittoken" class="u-border-2 u-border-custom-color-6 u-border-hover-custom-color-7 u-btn u-btn-round u-button-style u-custom u-custom-color-6 u-hover-custom-color-7 u-radius-6 u-text-active-custom-color-9 u-text-hover-palette-5-light-1 u-btn-1" target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">Telegram</a>
+            <a href="https://w.t.m.com" class="u-border-2 u-border-custom-color-6 u-border-hover-custom-color-7 u-btn u-btn-round u-button-style u-custom u-custom-color-6 u-hover-custom-color-7 u-radius-6 u-text-active-custom-color-9 u-text-hover-palette-5-light-1 u-btn-1" target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">Telegram</a>
             <a href="https://twitter.com/CryptonitToken" class="u-border-2 u-border-custom-color-6 u-border-hover-custom-color-7 u-btn u-btn-round u-button-style u-custom u-custom-color-6 u-hover-custom-color-7 u-radius-6 u-text-hover-palette-5-light-1 u-btn-2" target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">Twitter</a>
             <p class="u-align-center u-large-text u-text u-text-custom-color-9 u-text-variant u-text-1" data-animation-name="fadeIn" data-animation-duration="1500" data-animation-delay="0">Follow us on our platforms, find out about our latest news</p>
           </div>
@@ -246,5 +246,16 @@ background-color: #ffffff !important
     <footer class="u-align-center u-clearfix u-footer u-image u-footer" id="sec-01f1" data-image-width="1898" data-image-height="625"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-custom-color-10 u-text-variant u-text-1">All rights reserved - CRYPTONIT Token - 2021 </p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   </body>
 </html>
