--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <br>
         </p>
         <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-custom-color-4 u-radius-22 u-shape u-shape-round u-shape-2"></div>
-        <img src="images/panckswaptus.png" alt="" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-round u-radius-10 u-image-1" data-href="https://pancakeswap.com" data-target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">
+        <img src="images/panckswaptus.png" alt="" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-round u-radius-10 u-image-1" data-href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xc8de42d7b8aef843b8f3f3c96512bb1c4fb62c2e" data-target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">
         <p class="u-text u-text-custom-color-10 u-text-3" data-animation-name="fadeIn" data-animation-duration="1500" data-animation-delay="0" data-animation-direction="">
           <span style="font-size: 1.125rem;">Trade With CRYPTONIT</span>
         </p>
