--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p class="u-align-center u-text u-text-custom-color-10 u-text-3" data-animation-name="fadeIn" data-animation-duration="1500" data-animation-delay="0" data-animation-direction="">
               <span style="font-size: 1.125rem;">Trade With STARS</span>
             </p>
-            <img src="images/panckswaptus.png" alt="" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-round u-radius-10 u-image-2" data-href="https://pancakeswap.com" data-target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">
+            <img src="images/panckswaptus.png" alt="" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-round u-radius-10 u-image-2" data-href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x17f10f1755fa49c8e2222ed2044210542dec0a75" data-target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">
           </div>
         </div>
       </div>
