--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="u-custom-font u-heading-font u-text u-text-custom-color-4 u-text-default u-text-1">PancakeS​​wap</p>
         <h1 class="u-custom-font u-font-lato u-text u-text-default u-text-palette-5-base u-title u-text-2">Trade with BULLET</h1>
         <img src="images/bullet.png" alt="" class="u-image u-image-default u-image-2" data-image-width="580" data-image-height="98">
-        <img src="images/panckswaptus.png" alt="" class="u-image u-image-round u-radius-50 u-image-3" data-image-width="1683" data-image-height="318" data-href="https://pancakeswap.finance" data-target="_blank">
+        <img src="images/panckswaptus.png" alt="" class="u-image u-image-round u-radius-50 u-image-3" data-image-width="1683" data-image-height="318" data-href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xafbe288a30c4666d041f280ddc239117c864ea18" data-target="_blank">
       </div>
     </section>
     <section class="u-align-left u-clearfix u-image u-section-3" id="carousel_9568" data-image-width="256" data-image-height="256">
